Fixed player jumping.

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,15 @@ body {
   background-color: #333;
 }
 
+* {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
 body > * {
 	width: 1280px;
 	margin-left: auto;
